--- a/Dina/app/src/main/res/layout/activity_actividad7.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad7.xml
@@ -19,20 +19,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="127dp"
-            android:layout_height="257dp"
+            android:layout_height="237dp"
             android:layout_marginRight="10dp"
             app:srcCompat="@drawable/dina" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -40,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Zenbat neurtzen du traineru-estropadetan erabiltzen diren ontziak?"
+                android:textColor="@color/black"
                 android:textSize="18dp" />
 
             <RadioGroup
