--- a/Dina/app/src/main/res/values/colors.xml
+++ b/Dina/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="amarilloPrimario">#E6D32C</color>
     <color name="amarilloSecundario">#998B06</color>
     <color name="amornico">#E62C79</color>
+    <color name="grisbonito">#FF373737</color>
     <color name="blanco">#FFFFFF</color>
 </resources>
