--- a/Dina/app/src/main/res/layout/activity_creditos.xml
+++ b/Dina/app/src/main/res/layout/activity_creditos.xml
@@ -4,92 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:layout_marginHorizontal="20dp"
+    android:background="@drawable/fondotodo2"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40sp"
-        android:text="DINA Jokoa"
-        android:textAlignment="center"
-        android:textColor="@color/azulPrimario"
-        android:textSize="34sp"
-        android:textStyle="bold" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="217dp"
-        android:layout_marginTop="10sp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView18"
-            android:layout_width="170dp"
-            android:layout_height="214dp"
-            app:srcCompat="@drawable/dina" />
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/dina_jolasa" />
 
         <LinearLayout
-            android:layout_width="214dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="261dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/garatzaileak"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_weight="1"
-                android:text="GARATZAILEAK\n\nAdrián Ferradás\nBrian Escobar\nIrune Guinea"
-                android:textAlignment="center"
-                android:textColor="@color/azulPrimario"
-                android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/imageView18"
+                android:layout_width="170dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/dina_sin_fondo" />
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_weight="1"
-                android:text="SORMEN TALDEA\n\nPaula Montaña\nAinize Muguruza\nLeire Sierra\nAmaia Torre"
-                android:textAlignment="center"
-                android:textColor="@color/azulPrimario"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="214dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/garatzaileak"
+                    android:layout_width="170dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/cuadro_texto"
+                    android:paddingTop="5dp"
+                    android:text="GARATZAILEAK\n\nAdrián Ferradás\nBrian Escobar\nIrune Guinea"
+                    android:textAlignment="center"
+                    android:textColor="@color/grisbonito"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="170dp"
+                    android:layout_height="27dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/cuadro_texto"
+                    android:paddingTop="5dp"
+                    android:text="SORMEN TALDEA\n\nPaula Montaña\nAinize Muguruza\nLeire Sierra\nAmaia Torre"
+                    android:textAlignment="center"
+                    android:textColor="@color/grisbonito"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="252dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView19"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ehu_blanco_grande" />
+
+            <ImageView
+                android:id="@+id/imageView20"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="40sp"
+                android:layout_marginTop="50sp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/cj" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30sp"
+            android:background="@color/azulPrimario"
+            android:text="©DINA\n2023"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="264dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView19"
-            android:layout_width="311dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ehu_blanco_grande" />
-
-        <ImageView
-            android:id="@+id/imageView20"
-            android:layout_width="225dp"
-            android:layout_height="166dp"
-            android:layout_marginHorizontal="40sp"
-            android:layout_marginTop="50sp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/cj" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30sp"
-        android:background="@color/azulSecundario"
-        android:text="©DINA\n2023"
-        android:textAlignment="center" />
 
 </LinearLayout>
